fix: prevent horizontal scrolling

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -5,6 +5,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 6em;
+  overflow-x: hidden;
 }
 
 p {
